--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+header.main-header {
+    width: 100%;
+    display: flex;
+    padding: 10px 25px;
+    box-shadow: 1px 5px 15px #81818129;
+    justify-content: space-between;
+    align-items: center;
+    box-sizing: border-box;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  ul.navbar {
+      list-style: none;
+      display: flex;
   }
-  to {
-    transform: rotate(360deg);
+  
+  ul.navbar li {
+      margin-right: 15px;
   }
-}
+  
+  .container-logo {
+    width: 80px;
+  }
+  
+  .container-logo img {
+    width: 100%;
+  }
+  .card-item {
+      float: left;
+      border: 1px solid #ababab;
+      width: 200px;
+      margin-top: 20px;
+      margin-left: 20px;
+      box-shadow: 1px 1px 5px #0000002b;
+      border-radius: 5px;
+      padding: 10px;
+      text-align: center;
+    }
